# url-shortener-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/app/: __init__.py
src/app/api/: __init__.py  index.py
src/app/api/endpoints/: controller.py  routes.py
src/app/api/views/: routes.py
src/app/database/: mongo.py
src/app/database/schemas/: url.py
src/app/shared/: config.py  constants.py
src/static/templates/: error.html  index.html  result.html
