[project]
name = "url-shortener-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juanjo López", email = "juanjoselopez@usal.es" }
]
requires-python = ">=3.13"
dependencies = [
    "beanie[srv]>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
]
